core/src/test/resources/de/uni_luebeck/isp/tessla/core/errors/annotations/global-annotations-as-annotation.tessla
@@foo
@@bar

def @foo
def @@bar

in x: Events[Int]

@bar
@foo
out x